--- a/saurav/cgpu++/package.json
+++ b/saurav/cgpu++/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "pdfkit": "^0.10.0"
   }
 }
