--- a/sachin/cgpu++/package.json
+++ b/sachin/cgpu++/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "jsreport": "^2.6.1",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.4",
