--- a/sachin/cgpu++/package.json
+++ b/sachin/cgpu++/package.json
@@ -15,10 +15,10 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
-    "jsreport": "^2.6.1",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.4",
+    "orm": "^5.0.5",
     "pdfkit": "^0.10.0"
   }
 }
