--- a/sachin/cgpu++/package.json
+++ b/sachin/cgpu++/package.json
@@ -19,6 +19,8 @@
     "mysql": "^2.17.1",
     "nodemon": "^1.19.4",
     "orm": "^5.0.5",
-    "pdfkit": "^0.10.0"
+    "pdfkit": "^0.10.0",
+    "pdfmake": "^0.1.62",
+    "voilab-pdf-table": "^0.5.0"
   }
 }
