--- a/node/sachin/nodelogin/package.json
+++ b/node/sachin/nodelogin/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "nodemon": "^1.19.4"
   }
 }
