--- a/sachin/cgpu++/package.json
+++ b/sachin/cgpu++/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -22,5 +23,8 @@
     "pdfkit": "^0.10.0",
     "pdfmake": "^0.1.62",
     "voilab-pdf-table": "^0.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
