--- a/sachin/CGPU/config/config.json
+++ b/sachin/CGPU/config/config.json
@@ -1,7 +1,7 @@
 {"development" : {
 	
-    "username": "sauravsb99",
-    "password": "",
+    "username": "newuser",
+    "password": "password",
     "database": "CGPU",
     "host": "127.0.0.1",
     "dialect": "mysql"
