--- a/sachin/CGPU/package.json
+++ b/sachin/CGPU/package.json
@@ -13,21 +13,24 @@
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
-    "googleapis": "^27.0.0",
+    "googleapis": "^45.0.0",
+    "handlebars": "^4.5.3",
     "hbs": "~4.0.1",
+    "http-error": "0.0.6",
     "http-errors": "^1.6.3",
     "jade": "^1.11.0",
     "joi": "^13.6.0",
-    "jsonwebtoken": "^8.3.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
-    "mysql2": "^1.6.1",
+    "mysql2": "^1.7.0",
+    "nodemon": "^2.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pdfkit": "^0.9.0",
-    "pug": "2.0.0-beta11",
-    "sequelize": "^4.38.0",
+    "pug": "^2.0.4",
+    "sequelize": "^4.44.3",
     "uniqid": "^5.0.3"
   }
 }
