--- a/CGPU/BACKEND/package.json
+++ b/CGPU/BACKEND/package.json
@@ -22,6 +22,7 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "mysql2": "^1.6.1",
+    "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
