--- a/CGPU/BACKEND/package.json
+++ b/CGPU/BACKEND/package.json
@@ -11,8 +11,9 @@
     "bluebird": "^3.5.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
+    "css": "^2.2.4",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
     "googleapis": "^27.0.0",
     "hbs": "~4.0.1",
     "http-errors": "^1.7.3",
