--- a/CGPU/BACKEND/package.json
+++ b/CGPU/BACKEND/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "googleapis": "^27.0.0",
     "hbs": "~4.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "http-errors": "^1.7.3",
     "jade": "^1.11.0",
     "joi": "^13.6.0",
@@ -31,5 +32,9 @@
     "pug": "^2.0.4",
     "sequelize": "^4.38.0",
     "uniqid": "^5.0.3"
+  },
+  "devDependencies": {
+    "css-loader": "^3.2.0",
+    "style-loader": "^1.0.0"
   }
 }
